# fleet-stuff

add-filevault-user/: add-filevault-user.sh  add_filevault_user.plist
autopkg-fleetctl/: README.md  fleetctl.download.recipe  fleetctl.download.recipe.yaml  fleetctl.pkg.recipe  fleetctl.pkg.recipe.yaml
autopkg-fleetctl/pkg-scripts/: postinstall
death-to-extension-attributes/: README.md  firewall-state.md  uptime-in-hours.md
google-api/: directory-admin-populate-fullname.js
linux-mdm-snap-packages/: README.md  atc_tables.json  create_cronjob_snap_packages_table.sh  create_snap_database.sh  fleet_agent_options.yml  snap_packages.ext
linux-mdm-snap-packages/extension/: CMakeLists.txt  main.cpp  snap_packages_table.cpp  snap_packages_table.h
mac-shortcuts/: README.md  atc_tables.json  fleet_agent_options.yml
ubuntu-gsettings-atc/: README.md  atc_tables.json  create_cronjob_gsettings_table.sh  create_gsettings_database.sh  fleet_agent_options.yml
windows-hardening/: windows-10-hardening.ps1  windows-11-hardening.ps1  windows-aws-workspaces-hardening.ps1  windows-server-2019-hardening.ps1
